--- a/grayscale.html
+++ b/grayscale.html
@@ -5,31 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grayscale</title>
-
-    <style type="text/css">
-      body {
-        margin: 0px;
-        padding: 10px;
-        display: grid;
-        grid-gap: 10px;
-      }
-
-      #images {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 10px;
-      }
-
-      img,
-      canvas {
-        width: 100%;
-        height: auto;
-      }
-
-      input {
-        max-width: 400px;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <div id="images">
@@ -37,47 +13,17 @@
       <canvas id="output"></canvas>
     </div>
 
-    <input type="file" id="source" accept="image/*" />
+    <form id="controls">
+      <label for="source">Select input file:</label>
+      <input type="file" name="source" accept="image/*" />
+    </form>
+
+    <pre id="settings"></pre>
 
     <script type="module">
-      const $ = document.querySelector.bind(document);
+      import { attach } from "./main.js";
 
-      const source = $("#source");
-      const img = $("#input");
-      const outputCanvas = $("#output");
-
-      const inputCanvas = document.createElement("canvas");
-
-      const inputCtx = inputCanvas.getContext("2d");
-      const outputCtx = outputCanvas.getContext("2d");
-
-      function render() {
-        const { width, height } = img;
-        inputCanvas.width = width;
-        inputCanvas.height = height;
-        outputCanvas.width = width;
-        outputCanvas.height = height;
-
-        inputCtx.drawImage(img, 0, 0, width, height);
-
-        const imageData = inputCtx.getImageData(0, 0, width, height);
-        transform(imageData);
-
-        outputCtx.putImageData(imageData, 0, 0);
-      }
-
-      img.onload = render;
-
-      function loadSrc() {
-        const reader = new FileReader();
-        reader.onload = () => (img.src = reader.result);
-        reader.readAsDataURL(source.files[0]);
-      }
-
-      source.onchange = loadSrc;
-      loadSrc();
-
-      function transform(imageData) {
+      function transform(imageData, controls) {
         const { data } = imageData;
 
         for (let i = 0; i < data.length; i += 4) {
@@ -92,6 +38,8 @@
           data[i + 2] = l;
         }
       }
+
+      attach(transform);
     </script>
   </body>
 </html>
