--- a/grayscale.html
+++ b/grayscale.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grayscale</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/avery-gfs/images-quackathon-2025/style.css"
+    />
   </head>
   <body>
     <div id="images">
@@ -21,7 +25,7 @@
     <pre id="settings"></pre>
 
     <script type="module">
-      import { attach } from "./main.js";
+      import { attach } from "https://cdn.jsdelivr.net/gh/avery-gfs/images-quackathon-2025/main.js";
 
       function transform(imageData, controls) {
         const { data } = imageData;
