--- a/black-and-white.html
+++ b/black-and-white.html
@@ -5,31 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Black and White</title>
-
-    <style type="text/css">
-      body {
-        margin: 0px;
-        padding: 10px;
-        display: grid;
-        grid-gap: 10px;
-      }
-
-      #images {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 10px;
-      }
-
-      img,
-      canvas {
-        width: 100%;
-        height: auto;
-      }
-
-      input {
-        max-width: 400px;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/avery-gfs/images-quackathon-2025/styles.css"
+    />
   </head>
   <body>
     <div id="images">
@@ -37,53 +17,19 @@
       <canvas id="output"></canvas>
     </div>
 
-    <input type="file" id="source" accept="image/*" />
-    <label>White threshold: <span id="threshold"></span></label>
-    <input type="range" id="slider" min="0" max="255"/>
+    <form id="controls">
+      <label for="source">Select input file:</label>
+      <input type="file" name="source" accept="image/*" />
+      <label for="threshold">White threshold:</label>
+      <input type="range" name="threshold" min="0" max="255" />
+    </form>
+
+    <pre id="settings"></pre>
 
     <script type="module">
-      const $ = document.querySelector.bind(document);
+      import { attach } from "https://cdn.jsdelivr.net/gh/avery-gfs/images-quackathon-2025/main.js";
 
-      const source = $("#source");
-      const img = $("#input");
-      const outputCanvas = $("#output");
-      const slider = $("#slider");
-
-      const inputCanvas = document.createElement("canvas");
-
-      const inputCtx = inputCanvas.getContext("2d");
-      const outputCtx = outputCanvas.getContext("2d");
-
-      function render() {
-        const { width, height } = img;
-        inputCanvas.width = width;
-        inputCanvas.height = height;
-        outputCanvas.width = width;
-        outputCanvas.height = height;
-
-        inputCtx.drawImage(img, 0, 0, width, height);
-
-        const imageData = inputCtx.getImageData(0, 0, width, height);
-        const threshold = Number(slider.value);
-        $("#threshold").innerText = threshold;
-        transform(imageData, threshold);
-
-        outputCtx.putImageData(imageData, 0, 0);
-      }
-
-      img.onload = render;
-      slider.oninput = render;
-
-      function loadSrc() {
-        const reader = new FileReader();
-        reader.onload = () => (img.src = reader.result);
-        reader.readAsDataURL(source.files[0]);
-      }
-
-      source.onchange = loadSrc;
-      loadSrc();
-
-      function transform(imageData, threshold) {
+      function transform(imageData, controls) {
         const { data } = imageData;
 
         for (let i = 0; i < data.length; i += 4) {
@@ -91,14 +37,16 @@
           const g = data[i + 1];
           const b = data[i + 2];
 
-          const l = 0.2126 * r + 0.7152 * g + 0.0722 * b;
-          const bw = l >= threshold ? 255 : 0;
+          const lum = 0.2126 * r + 0.7152 * g + 0.0722 * b;
+          const bw = lum >= controls.threshold ? 255 : 0;
 
           data[i] = bw;
           data[i + 1] = bw;
           data[i + 2] = bw;
         }
       }
+
+      attach(transform);
     </script>
   </body>
 </html>
