--- a/hue.html
+++ b/hue.html
@@ -4,32 +4,12 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hue</title>
-
-    <style type="text/css">
-      body {
-        margin: 0px;
-        padding: 10px;
-        display: grid;
-        grid-gap: 10px;
-      }
-
-      #images {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 10px;
-      }
-
-      img,
-      canvas {
-        width: 100%;
-        height: auto;
-      }
-
-      input {
-        max-width: 400px;
-      }
-    </style>
+    <title>Black and White</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/avery-gfs/images-quackathon-2025/styles.css"
+    />
   </head>
   <body>
     <div id="images">
@@ -37,55 +17,20 @@
       <canvas id="output"></canvas>
     </div>
 
-    <input type="file" id="source" accept="image/*" />
-    <label>Hue adjustment: <span id="hue"></span></label>
-    <input type="range" id="slider" min="0" max="360"/>
+    <form id="controls">
+      <label for="source">Select input file:</label>
+      <input type="file" name="source" accept="image/*" />
+      <label for="hueDelta">Hue adjustment:</label>
+      <input type="range" name="hueDelta" min="0" max="360" />
+    </form>
+
+    <pre id="settings"></pre>
 
     <script type="module">
-      const $ = document.querySelector.bind(document);
-
-      const source = $("#source");
-      const img = $("#input");
-      const outputCanvas = $("#output");
-      const slider = $("#slider");
-
-      const inputCanvas = document.createElement("canvas");
-
-      const inputCtx = inputCanvas.getContext("2d");
-      const outputCtx = outputCanvas.getContext("2d");
-
-      function render() {
-        const { width, height } = img;
-        inputCanvas.width = width;
-        inputCanvas.height = height;
-        outputCanvas.width = width;
-        outputCanvas.height = height;
-
-        inputCtx.drawImage(img, 0, 0, width, height);
-
-        const imageData = inputCtx.getImageData(0, 0, width, height);
-        const delta = Number(slider.value);
-        $("#hue").innerText = delta;
-        transform(imageData, delta);
-
-        outputCtx.putImageData(imageData, 0, 0);
-      }
-
-      img.onload = render;
-      slider.oninput = render;
-
-      function loadSrc() {
-        const reader = new FileReader();
-        reader.onload = () => (img.src = reader.result);
-        reader.readAsDataURL(source.files[0]);
-      }
-
-      source.onchange = loadSrc;
-      loadSrc();
-
       import convert from "https://esm.sh/color-convert";
+      import { attach } from "https://cdn.jsdelivr.net/gh/avery-gfs/images-quackathon-2025/main.js";
 
-      function transform(imageData, delta) {
+      function transform(imageData, controls) {
         const { data } = imageData;
 
         for (let i = 0; i < data.length; i += 4) {
@@ -95,7 +40,7 @@
 
           let [h, s, l] = convert.rgb.hsl(r, g, b);
 
-          h += delta;
+          h += controls.hueDelta;
           h %= 360;
 
           [r, g, b] = convert.hsl.rgb(h, s, l);
@@ -105,6 +50,8 @@
           data[i + 2] = b;
         }
       }
+
+      attach(transform);
     </script>
   </body>
 </html>
