--- a/sobel.html
+++ b/sobel.html
@@ -4,32 +4,12 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dither</title>
-
-    <style type="text/css">
-      body {
-        margin: 0px;
-        padding: 10px;
-        display: grid;
-        grid-gap: 10px;
-      }
-
-      #images {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 10px;
-      }
-
-      img,
-      canvas {
-        width: 100%;
-        height: auto;
-      }
-
-      input {
-        max-width: 400px;
-      }
-    </style>
+    <title>Sobel</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/avery-gfs/images-quackathon-2025/styles.css"
+    />
   </head>
   <body>
     <div id="images">
@@ -37,77 +17,69 @@
       <canvas id="output"></canvas>
     </div>
 
-    <input type="file" id="source" accept="image/*" />
+    <form id="controls">
+      <label for="source">Select input file:</label>
+      <input type="file" name="source" accept="image/*" />
+    </form>
+
+    <pre id="settings"></pre>
 
     <script type="module">
-      const $ = document.querySelector.bind(document);
-
-      const source = $("#source");
-      const img = $("#input");
-      const outputCanvas = $("#output");
-
-      const inputCanvas = document.createElement("canvas");
-
-      const inputCtx = inputCanvas.getContext("2d");
-      const outputCtx = outputCanvas.getContext("2d");
-
-      function render() {
-        const { width, height } = img;
-        inputCanvas.width = width;
-        inputCanvas.height = height;
-        outputCanvas.width = width;
-        outputCanvas.height = height;
-
-        inputCtx.drawImage(img, 0, 0, width, height);
-
-        const imageData = inputCtx.getImageData(0, 0, width, height);
-        transform(imageData);
-
-        outputCtx.putImageData(imageData, 0, 0);
-      }
-
-      img.onload = render;
-
-      function loadSrc() {
-        const reader = new FileReader();
-        reader.onload = () => (img.src = reader.result);
-        reader.readAsDataURL(source.files[0]);
-      }
+      import { attach } from "https://cdn.jsdelivr.net/gh/avery-gfs/images-quackathon-2025/main.js";
 
       const kernelX = [
-        [1. 0, -1],
-        [2. 0, -2],
-        [1. 0, -1],
+        [1, 0, -1],
+        [2, 0, -2],
+        [1, 0, -1],
       ];
 
       const kernelY = [
-        [1. 2, 1],
-        [0. 0, 0],
-        [-1. -2, -1],
+        [1, 2, 1],
+        [0, 0, 0],
+        [-1, -2, -1],
       ];
 
-      source.onchange = loadSrc;
-      loadSrc();
+      function calcGradient(data, i, width, height, kernel) {
+        let gradient = 0;
+
+        const y = Math.floor(i / 4 / width);
+        const x = (i / 4) % width;
+
+        for (let dx = -1; dx <= 1; dx++) {
+          for (let dy = -1; dy <= 1; dy++) {
+            const nx = x + dx;
+            const ny = y + dy;
+
+            if (nx >= 0 && nx < width && ny >= 0 && ny < height) {
+              const j = (nx + ny * width) * 4;
+              const r = data[j];
+              const g = data[j + 1];
+              const b = data[j + 2];
+              const lum = 0.2126 * r + 0.7152 * g + 0.0722 * b;
+              gradient += kernel[dy + 1][dx + 1] * lum;
+            }
+          }
+        }
+
+        return gradient;
+      }
 
       function transform(imageData) {
-        const { width, data } = imageData;
+        const { width, height, data } = imageData;
+        const savedData = [...data];
 
         for (let i = 0; i < data.length; i += 4) {
-          const y = Math.floor((i / 4) / width);
-          const x = i / 4 - y;
+          const gx = calcGradient(savedData, i, width, height, kernelX);
+          const gy = calcGradient(savedData, i, width, height, kernelY);
+          const gradient = Math.sqrt(gx * gx + gy * gy);
 
-          const r = data[i];
-          const g = data[i + 1];
-          const b = data[i + 2];
-
-          const l = 0.2126 * r + 0.7152 * g + 0.0722 * b;
-          const bw = l * 16 / 255 < bayer[y % 4][x % 4] ? 0 : 255;
-
-          data[i] = bw;
-          data[i + 1] = bw;
-          data[i + 2] = bw;
+          data[i] = gradient;
+          data[i + 1] = gradient;
+          data[i + 2] = gradient;
         }
       }
+
+      attach(transform);
     </script>
   </body>
 </html>
