--- a/solutions/grayscale.html
+++ b/solutions/grayscale.html
@@ -30,7 +30,20 @@
       // https://en.wikipedia.org/wiki/Grayscale
       
       function transform(imageData, controls) {
-        // Your code goes here !!
+        const { data } = imageData;
+
+        for (let i = 0; i < data.length; i += 4) {
+          const r = data[i];
+          const g = data[i + 1];
+          const b = data[i + 2];
+
+          // https://en.wikipedia.org/wiki/Relative_luminance
+          const lum = 0.2126 * r + 0.7152 * g + 0.0722 * b;
+
+          data[i] = lum;
+          data[i + 1] = lum;
+          data[i + 2] = lum;
+        }
       }
 
       attach(transform);
